[develop] Начальный вариант адаптивного меню еды. Плавающая кнопка вызова меню. Мелкие правки по адаптации. Не окончательный вариант.

--- a/app/assets/pug/modules/_footer.pug
+++ b/app/assets/pug/modules/_footer.pug
@@ -1,20 +1,21 @@
-.navInfo
-    .container
-        .row
-            .col-md-6.d-none.d-md-block
-                include menu/_footerMenu
-            .col-md-3.col-xm.col-sm-6
-                .info.footer--info
-                    .info__icon.mr-2
-                        i.fas.fa-map-marker-alt
-                    .info__description.text-center
-                        p (068) 400-40-58
-                        p (063) 132-10-80
-            .col-md-3.col-xm.col-sm-6
-                .info.footer--info
-                    .info__icon.mr-2
-                        i.far.fa-clock
-                    .info__description.text-center
-                        p Ежедневно
-                        p с 10:00 до 22:00
-.copyright © Food-courier 2018 г
+footer
+    .navInfo
+        .container
+            .row
+                .col-lg-6.d-none.d-lg-block
+                    include menu/_footerMenu
+                .col-lg-3.col-xm.col-md-6
+                    .info.footer--info
+                        .info__icon.mr-2
+                            i.fas.fa-phone
+                        .info__description.text-center
+                            p (068) 400-40-58
+                            p (063) 132-10-80
+                .col-lg-3.col-xm.col-md-6
+                    .info.footer--info
+                        .info__icon.mr-2
+                            i.far.fa-clock
+                        .info__description.text-center
+                            p Ежедневно
+                            p с 10:00 до 22:00
+    .copyright © Food-courier 2018 г
