--- a/app/assets/pug/pages/restaraunt/tabs/_about.pug
+++ b/app/assets/pug/pages/restaraunt/tabs/_about.pug
@@ -1,16 +1,16 @@
 .about
     p.about__description.mb-3 Pizza Time предлагает: суши, пицца, бургеры, гарячие блюда и много другого!
-    .row
-        .col.col-md-6.info.justify-content-start
+    .row.justify-content-md-start
+        .col.col-md-6.col-x500-5.info.justify-content-start
             .info__icon.mr-2
                 i.far.fa-clock
-            .info__description.text-left
+            .info__description.text-left.info__description--smallFont
                 p Время работы
                 p с 10:00 до 22:00
-        .col.col-md-6.info.justify-content-start
+        .col.col-x500-auto.info.justify-content-start.pl-sm-0
             .info__icon.mr-2
                 i.fas.fa-map-marker-alt
-            .info__description.text-left
+            .info__description.text-left.info__description--smallFont
                 p Наш адрес
                 p г. Каменское Пр. Победы 29
     p.about__description.mt-3 PizzaTime на карте
