--- a/app/assets/pug/pages/restaraunt/tabs/_delivery.pug
+++ b/app/assets/pug/pages/restaraunt/tabs/_delivery.pug
@@ -1,38 +1,39 @@
-.row.terms
-    .col-md-4.termsItem
-        span.termsItem__title Мин. заказ:
-        .d-flex.justify-content-center.align-items-center
-            //img.termsItem__icon(src='static/svg/restaraunt/terms/coins.svg')
-            +icon('coins', 'termsItem__icon')
-            span.termsItem__cost.ml-1 50₴
-    .col-md-4.termsItem
-        span.termsItem__title Бесплатная доставка:
-        .d-flex.justify-content-center.align-items-center
-            +icon('money', 'termsItem__icon')
-            span.termsItem__cost.ml-1 от 180₴
-    .col-md-4.termsItem
-        span.termsItem__title Время доставки:
-        .d-flex.justify-content-center.align-items-center
-            +icon('stopwatch', 'termsItem__icon')
-            span.termsItem__cost.ml-1 30-60 мин
-h3.terms__title.mt-3.mb-3 Стоимость доставки
-.row
-    .col.col-md-6.deliveryDescItem
-        .deliveryDescItem__cost 40₴
-        .deliveryDescItem__regions 9, 10, 11 мкр-н
-        .deliveryDescItem__streets
-            p - пр. Надднепрянский
-            p - пр. Героев АТО
-            p - пр. Ивана Франка
-            p - пр. Победы
-            p - ул. 40-лет победы
-    .col.col-md-6.deliveryDescItem
-        .deliveryDescItem__cost 45₴
-        .deliveryDescItem__regions 1, 2, 3, 4, 5 мкр-н
-        .deliveryDescItem__streets
-            p - пр. Металлургов
-            p - пр. Дружбы Народов
-            p - ул. Харьковская
-            p - бул. Независимости
-            p - бул. Героев
-            p - бул. Строителей
+.terms
+    .row
+        .col-md-4.termsItem
+            span.termsItem__title Мин. заказ:
+            .d-flex.justify-content-center.align-items-center
+                //img.termsItem__icon(src='static/svg/restaraunt/terms/coins.svg')
+                +icon('coins', 'termsItem__icon')
+                span.termsItem__cost.ml-1 50₴
+        .col-md-4.termsItem
+            span.termsItem__title Бесплатная доставка:
+            .d-flex.justify-content-center.align-items-center
+                +icon('money', 'termsItem__icon')
+                span.termsItem__cost.ml-1 от 180₴
+        .col-md-4.termsItem
+            span.termsItem__title Время доставки:
+            .d-flex.justify-content-center.align-items-center
+                +icon('stopwatch', 'termsItem__icon')
+                span.termsItem__cost.ml-1 30-60 мин
+    h3.terms__title.mt-3.mb-3 Стоимость доставки
+    .row
+        .col.col-md-6.deliveryDescItem
+            .deliveryDescItem__cost 40₴
+            .deliveryDescItem__regions 9, 10, 11 мкр-н
+            .deliveryDescItem__streets
+                p - пр. Надднепрянский
+                p - пр. Героев АТО
+                p - пр. Ивана Франка
+                p - пр. Победы
+                p - ул. 40-лет победы
+        .col.col-md-6.deliveryDescItem
+            .deliveryDescItem__cost 45₴
+            .deliveryDescItem__regions 1, 2, 3, 4, 5 мкр-н
+            .deliveryDescItem__streets
+                p - пр. Металлургов
+                p - пр. Дружбы Народов
+                p - ул. Харьковская
+                p - бул. Независимости
+                p - бул. Героев
+                p - бул. Строителей
