--- a/app/assets/pug/pages/restaraunt/tabs/_menu.pug
+++ b/app/assets/pug/pages/restaraunt/tabs/_menu.pug
@@ -6,7 +6,7 @@
         -
             var imgSrc = 'static/img/restaraunts/food/pizza/' + i + '.jpg'
             var costs = item.cost
-        .col-md-4
+        .col-x500-6.col-md-4.d-flex.justify-content-center
             .foodContainer
                 .foodItem
                     img(src=imgSrc alt='Пицца').foodItem__img.img-responsive
