--- a/app/assets/sass/pages/index/_sectionCauses.sass
+++ b/app/assets/sass/pages/index/_sectionCauses.sass
@@ -37,11 +37,11 @@
     color: lighten(#030303, 35%)
     line-height: 1.4
 
-+media-breakpoint-down(lg)
+@media (max-width: 992px)
   .causesItem
     &__header
       padding: 0 20px
-+media-breakpoint-down(md)
+@media (max-width: 768px)
   .causesItem
     &:after
       display: none
