[adaptive_restaurant] Заадаптивил страницу ресторана, поправил размеры шрифтов на ховере айтемов на главной.

--- a/app/assets/sass/modules/common/_itemOverlay.sass
+++ b/app/assets/sass/modules/common/_itemOverlay.sass
@@ -64,3 +64,8 @@ $animationTime: .3
   .itemOverlay
     &--hot
       justify-content: flex-start
+@media (max-width: 490px)
+  .itemOverlay--radius
+    border-radius: 15px
+    &:before
+      border-radius: 7px
