--- a/app/assets/sass/modules/header/_infoLine.sass
+++ b/app/assets/sass/modules/header/_infoLine.sass
@@ -42,8 +42,10 @@ $icons-size: 44px
 
 +media-breakpoint-down(xs)
   .info
-    margin-bottom: 10px
-    margin-top: 10px
     justify-content: left
     &__description
       text-align: left
+  .infoLine--info
+    margin-top: 10px
+    &:last-child
+      margin-bottom: 10px
