--- a/app/assets/sass/pages/index/_sectionShops.sass
+++ b/app/assets/sass/pages/index/_sectionShops.sass
@@ -16,3 +16,29 @@
     &--bottom30
       margin-bottom: 30px
 
++media-breakpoint-down(sm)
+  .itemOverlay__text
+    font-size: 35px
+
+@media (max-width: 540px)
+  .itemOverlay__text
+    font-size: 30px
+@media (max-width: 490px)
+  .itemOverlay__text
+    font-size: 25px
+  .sectionShopsItem
+    img
+      border-radius: 15px
+
+@media (max-width: 430px)
+  .itemOverlay__text
+    font-size: 20px
+
+@media (max-width: 390px)
+  .itemOverlay__text
+    font-size: 16px
+
+@media (max-width: 340px)
+  .itemOverlay__text
+    font-size: 14px
+
