--- a/app/assets/pug/modules/_header.pug
+++ b/app/assets/pug/modules/_header.pug
@@ -15,13 +15,13 @@ header.header
         .row.infoLine.justify-content-end.justify-content-sm-around.no-gutters
             .col-4.d-none.d-md-flex.align-items-center.justify-content-center
                 +icon('logo', 'infoLine__logo')
-            .col-12.info.col-xm-6.col-md-4
+            .col-12.info.infoLine--info.col-xm-6.col-md-4
                 .info__icon.mr-2
                     i.fas.fa-map-marker-alt
                 .info__description
                     p Доставка еды по л/б
                     p г. Каменское
-            .col-12.info.col-xm-6.col-md-4
+            .col-12.info.infoLine--info.col-xm-6.col-md-4
                 .info__icon.mr-2
                     i.far.fa-clock
                 .info__description
