--- a/app/assets/pug/pages/restaraunt/tabs/_about.pug
+++ b/app/assets/pug/pages/restaraunt/tabs/_about.pug
@@ -1,13 +1,13 @@
 .about
     p.about__description.mb-3 Pizza Time предлагает: суши, пицца, бургеры, гарячие блюда и много другого!
     .row.justify-content-md-start
-        .col.col-md-6.col-x500-5.info.justify-content-start
+        .col-12.col-x500-5.col-md-6.info.about--info.justify-content-start
             .info__icon.mr-2
                 i.far.fa-clock
             .info__description.text-left.info__description--smallFont
                 p Время работы
                 p с 10:00 до 22:00
-        .col.col-x500-auto.info.justify-content-start.pl-sm-0
+        .col-12.col-x500-7.col-md-6.info.about--info.justify-content-start.pl-sm-0
             .info__icon.mr-2
                 i.fas.fa-map-marker-alt
             .info__description.text-left.info__description--smallFont
