--- a/app/assets/pug/pages/restaraunt/tabs/_delivery.pug
+++ b/app/assets/pug/pages/restaraunt/tabs/_delivery.pug
@@ -18,7 +18,7 @@
                 span.termsItem__cost.ml-1 30-60 мин
     h3.terms__title.mt-3.mb-3 Стоимость доставки
     .row
-        .col.col-md-6.deliveryDescItem
+        .col-12.col-xm-6.deliveryDescItem
             .deliveryDescItem__cost 40₴
             .deliveryDescItem__regions 9, 10, 11 мкр-н
             .deliveryDescItem__streets
@@ -27,7 +27,7 @@
                 p - пр. Ивана Франка
                 p - пр. Победы
                 p - ул. 40-лет победы
-        .col.col-md-6.deliveryDescItem
+        .col-12.col-xm-6.deliveryDescItem
             .deliveryDescItem__cost 45₴
             .deliveryDescItem__regions 1, 2, 3, 4, 5 мкр-н
             .deliveryDescItem__streets
